test/spec_vectors/store/fail/module_20.wat
(module (memory 1) (func $type-value-empty-in-block (i32.const 0) (block (i32.const 0) (i32.store))))